deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-website
  labels:
    app.kubernetes.io/name: personal-website
