deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: personal-website
  labels:
    app.kubernetes.io/name: website
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: website
  ports:
    - name: http
      port: 80
      targetPort: http
